--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,8 @@
-<div class="container-fluid container-home">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-    <h1 class="home"><%= current_user.username %> Is Authorized</h1>
-    <%= image_tag current_user.image, class: "img-circle img-thumbnail home-image" %>
-    <h2 class="home"> <%= current_user.username %> </h2>
-    <h2 class="home"> <%= current_user.email %> </h2>
-    <%= link_to "Logout", logout_path, class: "btn btn-lg btn-default btn-home" %>
-  </div>
-  <div class="col-md-2"></div>
+<div class="profile">
+  <h1><%= @user_profile[:name] %>'s Profile</h1>
+  <%= image_tag @user_profile[:avatar_url], class: "thumbnail" %>
+  <h2>Username: <%= @user_profile[:login] %> </h2>
+  <h2>Email: <%= @user_profile[:email] %> </h2>
+  <h2> Starred Repositories: <%= @starred %> </h2>
+  <%= link_to "Logout", logout_path, class: "button_logout" %>
 </div>
