--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,7 @@
-<div class="container-fluid container-home">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-    <h1 class="home">Welcome to Github</h1>
-    <h2 class="home">...but not the real Github</h2>
-    <%= link_to "Login with Github", "https://github.com/login/oauth/authorize?client_id=e97ab6e2939b796015d3&scope=repo", class: "btn btn-lg btn-default btn-home" %>
-  </div>
-  <div class="col-md-2"></div>
+<div class="home">
+  <h1>Welcome to Github</h1>
+  <h3>...but not the real Github</h3>
+  <%= link_to "Login", "https://github.com/login/oauth/authorize?client_id=e97ab6e2939b796015d3&scope=repo", class: "button_login" %>
 </div>
+<br>
+<img class="logo" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
