--- a/app/views/followers/index.html.erb
+++ b/app/views/followers/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'layouts/navbar' %>
 
-<div class="follower_list">
+<div class="list">
   <h1>Followers</h1>
 
   <% @followers.each do |follower| %>
