--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'layouts/navbar' %>
 
-<div class="starred_repo_list">
+<div class="list">
   <h1>Starred Repositories</h1>
 
   <% @starred.each do |star| %>
