--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
   <li class="nav_li"><a href="/stars">Stars (<%= @star_count %>)</a></li>
   <li class="nav_li"><a href="/followers">Followers (<%= @follower_count %>)</a></li>
   <li class="nav_li"><a href="/following">Following (<%= @following_count %>)</a></li>
-  <li class="nav_li"><a href="#organizations">Organizations</a></li>
+  <li class="nav_li"><a href="/organizations">Organizations (<%= @organization_count %>)</a></li>
   <li class="nav_li"><a href="#recent_commits">Recent Commits</a></li>
   <li class="nav_li" style="float:right"><a href="/logout">Logout</a></li>
 </ul>
