--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <ul class="nav_ul">
   <li class="nav_li"><img class="nav_logo" src="https://static.wixstatic.com/media/7b5e67_514511f5eee64e3d90ab855dafb4d014~mv2.png" ></li>
   <li class="nav_li"><a href="/dashboard">My Profile</a></li>
-  <li class="nav_li"><a href="#repositories">Repositories</a></li>
+  <li class="nav_li"><a href="/repositories">Repositories (<%= @repository_count %>)</a></li>
   <li class="nav_li"><a href="/stars">Stars (<%= @star_count %>)</a></li>
   <li class="nav_li"><a href="/followers">Followers (<%= @follower_count %>)</a></li>
   <li class="nav_li"><a href="/following">Following (<%= @following_count %>)</a></li>
