--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,5 +6,6 @@
   <li class="nav_li"><a href="/followers">Followers (<%= @follower_count %>)</a></li>
   <li class="nav_li"><a href="/following">Following (<%= @following_count %>)</a></li>
   <li class="nav_li"><a href="/organizations">Organizations (<%= @organization_count %>)</a></li>
+  <li class="nav_li"><a href="/feed">Feed</a></li>
   <li class="nav_li" style="float:right"><a href="/logout">Logout</a></li>
 </ul>
